# SpotifyDock

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AuthPopup.tsx  Background.tsx  ControlPanel.tsx  HoverZone.tsx  LyricLine.tsx  LyricRenderer.tsx  NoLyricsState.tsx  Overlay.tsx  TrackInfo.tsx
src/hooks/: useActiveLyrics.ts  useInterpolatedProgress.ts  useLyrics.ts  useSpotifyPlayback.ts
src/services/: colorExtractor.ts  lrclib.ts  lyricsCache.ts  lyricsParser.ts  settings.ts  spicetifyBridge.ts  spotify.ts
src/styles/: globals.css
src/types/: lyrics.ts  spotify.ts
